# zal

./: .gitignore  CMakeLists.txt  README.md  SConstruct
asm/: CMakeLists.txt  main.c  main.cc
compile/: CMakeLists.txt  main.c  main.cc
generator/: CMakeLists.txt  main.c
lexer/: .gitignore  .vimrc  CMakeLists.txt  README.md  SConstruct  TODO  story.tex
lexer/src/: SConscript  main.c
lexer/src/include/: .dfa.h.swo  debug.h  dfa.h  linked_list.h  scan.h  stream.h  token.h
lexer/src/lib/: dfa.c  linked_list.c  maximal_munch.c  scan.c  stream.c  token.c
lexer/src/shared/: enum_pretty_gen.py  grammer_0.txt
lexer/src/shared/file_io/: file_io_helpers.c  file_io_helpers.h
lexer/src/shared/str/: str_helper.c  str_helper.h
lexer/user/: simple.c  simple_add.c
link/: CMakeLists.txt  main.c  main.cc
linker/: CMakeLists.txt  main.c
modules/assembler/: CMakeLists.txt
modules/hi_opt/: CMakeLists.txt
modules/linker/: CMakeLists.txt
modules/lo_opt/: CMakeLists.txt
modules/parser/: CMakeLists.txt
modules/semanter/: CMakeLists.txt
parse/: .gitignore  CMakeLists.txt  bench.py  main.c  main.cc
parser/: CMakeLists.txt  main.c
scan/: .gitignore  CMakeLists.txt  README.md  SConstruct  TODO  bench.py  compile_commands.json  debug.sh  main.c  main.cc
scan/include/: dfa.h  lang_defs.h  maximal_munch.h  token.h
scan/lib/: dfa.c  maximal_munch.c  token.c
scan/shared/file_io/: file_io_helpers.c  file_io_helpers.h
scan/shared/str/: str_helper.c  str_helper.h
scan/src/: SConscript  main.c
scan/src/include/: dfa.h  maximal_munch.h  scan.h  token.h
scan/src/lib/: dfa.c  maximal_munch.c
scan/src/shared/file_io/: file_io_helpers.c
scan/src/shared/str/: str_helper.c
scan/tools/: run.sh
tools/hexer/: .gitignore  CMakeLists.txt  Parser.cc  Parser.h  main.cc  main.cpp  testbench.py  zal.code-workspace
tools/hexer/arch/mips/instr/: MIPS32Instr_I.cc  MIPS32Instr_I.h  MIPS32Instr_J.cc  MIPS32Instr_J.h  MIPS32Instr_R.cc  MIPS32Instr_R.h  MIPS32Instruction.cc  MIPS32Instruction.h  defs.h
